Remove content-visibility to fix layout issues

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -90,10 +90,6 @@
     font-family: 'Vrau Loux', ui-serif, Georgia, serif !important;
   }
 
-  .cv-auto {
-    content-visibility: auto;
-    contain-intrinsic-size: 1px 800px;
-  }
 }
 
 @layer components {
